add JDK 14 segment API tests